# Project5

./: .gitignore  script.sh
autohome_test/: auto_home_socks5_sock.hpp  main.cpp  safe_proxy.hpp  socks5_https_socket_base.hpp
healer/: healer.cpp
healer/include/: database_connector.hpp  utilities.hpp
healer/src/: database_connector.cpp  utilities.cpp
image_processing/: image_processing.cpp
scripts/: run.py
scripts/config/: database.ini  development.py  production.py
server-2/: auto_home_sock.hpp  backgroundworker.cpp  backgroundworker.hpp  database_connector.cpp  jjgames_socket.cpp  jjgames_socket.hpp  main.cpp  pp_sports.cpp  pp_sports.hpp  safe_proxy.cpp  safe_proxy.hpp  utilities.cpp  utilities.hpp  web_base.hpp  worker.cpp  worker.hpp
server-3.1/: CMakeLists.txt  auto_home_http_sock.hpp  backgroundworker.cpp  backgroundworker.hpp  https_socket_base.hpp  jjgames_socket.hpp  main.cpp  pp_sports.hpp  proxy_config.json  safe_proxy.hpp  session.cpp  session.hpp  socks5_http_socket_base.hpp  socks5_https_socket_base.hpp  utilities.cpp  utilities.hpp  watch_home_socks5.hpp
server-3.1/include/: all_sockets.hpp  auto_home_http_sock.hpp  auto_home_socks5_sock.hpp  backgroundworker.hpp  chinese_macau_socket.hpp  container.hpp  custom_timed_socket.hpp  database_connector.hpp  declarations.hpp  enumerations.hpp  fields_alloc.hpp  file_utils.hpp  grand_lisboa_socket.hpp  http_instantiator.hpp  http_socket_base.hpp  http_uri.hpp  jjgames_socket.hpp  json_utils.hpp  lisboa_macau_socket.hpp  macau_baccarat_socket.hpp  number_stream.hpp  pc_auto_socket.hpp  pp_sports.hpp  protocol.hpp  qunar_socket.hpp  random.hpp  request_handler.hpp  safe_proxy.hpp  server.hpp  session.hpp  socket_factory.hpp  socket_utils.hpp  sockets_instantiator.hpp  sockets_interface.hpp  socks5_http_socket_base.hpp  socks5_https_socket_base.hpp  socks5_protocol.hpp  socks_initiator.hpp  string_utils.hpp  task_data.hpp  (+7 more)
server-3.1/include/http/: auto_home_http_sock.hpp  custom_timed_socket.hpp  digit_casinos_http_base.hpp  digit_casinos_socks5_http.hpp  http_socket_base.hpp  lazada_http.hpp  pp_sports.hpp  socks5_http_socket_base.hpp  xpuji_socket.hpp
server-3.1/include/https/: auto_home_socks5_sock.hpp  digit_casinos_socks5_https.hpp  fafa77_socks5_socket.hpp  lazada_socks5.hpp  lisboa_macau_socket.hpp  socks5_https_socket_base.hpp  sun_city_socket.hpp
server-3.1/src/: auto_home_socks5_sock.cpp  backgroundworker.cpp  chinese_macau_socket.cpp  database_connector.cpp  file_utils.cpp  grand_lisboa_socket.cpp  http_instantiator.cpp  http_uri.cpp  json_utils.cpp  lisboa_macau_socket.cpp  macau_baccarat_socket.cpp  number_stream.cpp  pp_sports.cpp  random.cpp  request_handler.cpp  safe_proxy.cpp  server.cpp  session.cpp  socket_factory.cpp  sockets_instantiator.cpp  socks5_https_socket_base.cpp  socks_http_initiator.cpp  socks_https_initiator.cpp  socks_initiator.cpp  string_utils.cpp  sun_city_socket.cpp  task_data.cpp  utilities.cpp  wines_socket.cpp  worker.cpp
server-3.1/src/http/: auto_home_http_sock.cpp  digit_casinos_http_base.cpp  digit_casinos_socks5_http.cpp  http_socket_base.cpp  lazada_http.cpp  socks5_http_socket_base.cpp  socks_http_initiator.cpp  xpuji_socket.cpp
server-3.1/src/https/: auto_home_socks5_sock.cpp  digit_casinos_socks5_https.cpp  fafa77_socks5_socket_t.cpp  grand_lisboa_socket.cpp  jjgames_socket.cpp  lazada_socks5.cpp  macau_baccarat_socket.cpp  pc_auto_socket.cpp  qunar_socket.cpp  socks_https_initiator.cpp  sun_city_socket.cpp
server2/: auto_home_http_sock.hpp  auto_home_socks5_sock.hpp  backgroundworker.cpp  backgroundworker.hpp  database_connector.cpp  database_connector.hpp  http_socket_base.hpp  https_socket_base.hpp  jjgames_socket.hpp  main.cpp  pp_sports.hpp  proxy_config.json  safe_proxy.cpp  safe_proxy.hpp  server.cpp  session.cpp  session.hpp  socks5_http_socket_base.hpp  socks5_https_socket_base.hpp  utilities.cpp  utilities.hpp  watch_home_http.hpp  watch_home_socks5.hpp  worker.cpp
server3/: backgroundworker.hpp  https_socket_base.hpp  server.hpp  session.cpp  socks5_http_socket_base.hpp  socks5_https_socket_base.hpp  worker.cpp
wudi-manager/: socks4.hpp  wudi-manager.cpp
wudi-server/: CMakeLists.txt  auto_home_sock.cpp  auto_home_sock.hpp  backgroundworker.cpp  backgroundworker.hpp  database_connector.cpp  database_connector.hpp  fields_alloc.hpp  http_proxy_servers.txt  http_socket.cpp  http_socket.hpp  http_socket_base.hpp  jj_games_socket.cpp  jj_games_socket.hpp  jjgames_socket.cpp  jjgames_socket.hpp  main.cpp  pp_sports.cpp  pp_sports.hpp  safe_proxy.cpp  safe_proxy.hpp  server.cpp  server.hpp  session.cpp  session.hpp  socks5_http_socket_base.hpp  socks5_https_socket_base.hpp  utilities.cpp  utilities.hpp  watch_home.cpp  watch_home.hpp  web_base.hpp  websocket_updates.cpp  websocket_updates.hpp  worker.cpp  worker.hpp
wudi-worker/: data.json  fields_alloc.hpp  wudi-worker.cpp
